# scpi-instrument-toolkit

./: .coderabbit.yaml  .coverage  .gitattributes  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO_FIX_LEGACY.md  WINDOWS.md  architecture.html  awg.html  dmm.html  ev2300.html  examples.html  fix_windows.py  general.html  index.html  install.html  instruments.html  labview.html  labview_bridge.py  logging.html  mkdocs-library.yml  mkdocs.yml  mock_instruments.py  my_test_script.scpi  ni_pxie.html  objects.inv  plotting.html  psu.html  pxie_monitor.py  pyproject.toml  python.html  repl.py  repl_wrapper.py  requirements.txt  scope.html  scpi-repl.bat  (+7 more)
.claude/agents/: debug-issue.md  docs-sync.md  driver-test-writer.md  pre-push-validator.md  scpi-contract-reviewer.md
.github/: pr_body.md
.github/workflows/: ci.yml  close-obsolete-issues.yml  dependency-review.yml  docs.yml  nightly.yml  release.yml
api/: awg.html  base.html  dmm.html  enums.html  ev2300.html  psu.html  scope.html  smu.html
datasheets/markdown/: Agilent_HP_34401A_Manual.md  Agilent_HP_E3631A_UserGuide.md  BK_Precision_4060_Manual.md  Keysight_EDU33212A_Manual.md  Keysight_EDU36311A_Manual.md  Rigol_DHO800_ProgrammingGuide.md  Tektronix_MSO2024_Manual.md  tps22968.md
docs/: architecture.md  awg.md  dmm.md  ev2300.md  examples.md  general.md  index.md  install.md  instruments.md  labview.md  logging.md  ni_pxie.md  plotting.md  psu.md  python.md  scope.md  scpi_audit.md  scripting.md  smu.md  troubleshooting.md
docs-library/: examples.md  getting-started.md  index.md
docs-library/instruments/: device-manager.md  discovery.md
docs-library/instruments/awg/: bk-4063.md  jds6600.md  keysight-edu33212a.md
docs-library/instruments/dmm/: hp-34401a.md  keysight-edu34450a.md  owon-xdm1041.md
docs-library/instruments/psu/: hp-e3631a.md  keysight-edu36311a.md  matrix-mps6010h.md
docs-library/instruments/scope/: keysight-dsox1204g.md  rigol-dho804.md  tektronix-mso2024.md
docs-library/instruments/specialized/: ni-pxie-4139.md  ti-ev2300.md
docs/api/: awg.md  base.md  dmm.md  enums.md  ev2300.md  psu.md  scope.md  smu.md
docs/js/: accessibility.js
docs/stylesheets/: accessibility.css
examples/Cross Script/: _interop_helper.py  _interop_helper.scpi  complete_cross_script.py  complete_cross_script.scpi  cross_script_demo.py  cross_script_demo.scpi
examples/python/: cross_script_demo.py  live_combined_plot.py  live_freq_sweep.py  live_multi_plot.py  live_voltage_sweep.py
examples/scpi/: cross_script_demo.scpi  live_combined_plot.scpi  live_freq_sweep.scpi  live_multi_plot.scpi  live_voltage_sweep.scpi
lab_instruments/: __init__.py  __main__.py  _docs_extract.py  docs_server.py  enums.py  examples.py  mock_instruments.py  repl.py
lab_instruments/gui/: __init__.py  app.py
lab_instruments/gui/core/: dispatcher.py  helpers.py  workspace.py
lab_instruments/gui/dialogs/: command_palette.py
lab_instruments/gui/instrument_blocks/: awg_block.py  bq_eval_block.py  dmm_block.py  psu_block.py  scope_block.py  smu_block.py
lab_instruments/gui/panels/: device_panel.py  file_explorer.py
lab_instruments/gui/widgets/: console.py  docs_viewer.py  editor.py  file_viewers.py  (+4 more)
lab_instruments/repl/: __init__.py  capabilities.py  context.py  device_registry.py  errors.py  measurement_store.py  shell.py  syntax.py
lab_instruments/site/: 404.html  architecture.html  awg.html  dmm.html  ev2300.html  examples.html  general.html  index.html  install.html  instruments.html  labview.html  logging.html  ni_pxie.html  objects.inv  psu.html  python.html  scope.html  scripting.html  smu.html  troubleshooting.html
lab_instruments/site-library/: 404.html  examples.html  getting-started.html  index.html
lab_instruments/src/: bk_4063.py  device_manager.py  discovery.py  ev2300.py  hp_34401a.py  hp_e3631a.py  jds6600_generator.py  keysight_dsox1204g.py  keysight_edu33212a.py  keysight_edu34450a.py  keysight_edu36311a.py  labview_bridge.py  matrix_mps6010h.py  ni_pxie_4139.py  owon_xdm1041.py  rigol_dho804.py  tektronix_mso2024.py  terminal.py
lab_instruments/tui/: __init__.py  app.py  command_provider.py  completer.py  dispatcher.py  history.py
manuals/: build_student_manual.py  build_ta_guide.py  student-user-manual.docx  ta-developer-guide.docx
manuals/student/: ch01_getting_started.md  ch02_navigating_docs.md  ch03_first_measurement.md  ch04_running_examples.md  ch05_lab_workflow.md  ch06_variables_calc_logging.md  ch07_scripting.md  ch08_multi_instrument.md  ch09_data_analysis.md  ch10_tips_gotchas.md  ch11_troubleshooting.md
manuals/ta-developer/: ch01_architecture.md  ch02_dev_setup.md  ch03_adding_driver.md  ch04_adding_repl_commands.md  ch05_adding_examples.md  ch06_driver_contract.md  ch07_writing_tests.md  ch08_ci_debugging.md  ch09_updating_docs.md  ch10_script_engine.md  ch11_releasing.md
scripts/: gen_architecture_diagram.py  gen_ref_pages.py  generate_doc_screenshots.py  run_repl_doc_block.py  validate_all_doc_examples.py  validate_doc_examples.py
search/: search_index.json
tests/: conftest.py  test_awg.py  test_awg_commands.py  test_awg_commands_extra.py  test_calc_logging_arithmetic.py  test_check_report.py  test_control_flow.py  test_data_script_dir.py  test_discovery.py  test_dmm.py  test_dmm_commands.py  test_doc_examples.py  test_docs_examples_live.py  test_ev2300_commands.py  test_ev2300_driver.py  test_expander.py  test_general_commands.py  test_general_commands_extra.py  test_hp_34401a_driver.py  test_hp_e3631a_driver.py  test_instrument_measurement_workflows.py  test_integration.py  test_jds6600_driver.py  test_keysight_dsox1204g_driver.py  test_keysight_edu33212a.py  test_keysight_edu33212a_driver.py  test_keysight_edu34450a_driver.py  test_keysight_edu36311a_driver.py  test_keysight_scope_commands.py  test_labview_bridge.py  test_logging_commands.py  test_logging_commands_extra.py  test_logging_pdf_report.py  test_mock_instruments.py  test_ni_pxie_4139.py  test_oscope.py  test_oscope_old.py  test_plot_command.py  test_psu.py  test_psu_commands.py  (+36 more)
(+62 files in other folders)
