[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpi-instrument-toolkit"
version = "0.1.137"
description = "Python drivers and interactive REPL for SCPI test and measurement instruments"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Brighton Sikarskie"},
    {name = "Cesar Magana"},
]
keywords = ["scpi", "visa", "instrument", "oscilloscope", "power-supply", "multimeter", "function-generator", "lab", "test-equipment"]
dependencies = [
    "PyVISA>=1.14.0",
    "numpy>=1.21.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
sim = ["pyvisa-py"]
docs = ["mkdocs-material"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
lint = ["ruff>=0.4.0"]

[project.scripts]
scpi-repl = "lab_instruments.repl:main"

[project.urls]
Homepage = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit"
Repository = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit"
Issues = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit/issues"

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests using mock devices through the full REPL stack",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.coverage.run]
source = ["lab_instruments"]
omit = ["lab_instruments/site/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["lab_instruments*"]

[tool.setuptools.package-data]
lab_instruments = [
    "site/*.html",
    "site/*.xml",
    "site/*.gz",
    "site/assets/stylesheets/*.css",
    "site/assets/stylesheets/*.map",
    "site/assets/javascripts/*.js",
    "site/assets/javascripts/*.map",
    "site/assets/javascripts/lunr/*.js",
    "site/assets/javascripts/lunr/min/*.js",
    "site/assets/javascripts/workers/*.js",
    "site/assets/javascripts/workers/*.map",
    "site/search/*.json",
]
