[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpi-instrument-toolkit"
version = "1.0.7"
description = "Python drivers and interactive REPL for SCPI test and measurement instruments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brighton Sikarskie"},
    {name = "Cesar Magana"},
]
keywords = ["scpi", "visa", "instrument", "oscilloscope", "power-supply", "multimeter", "function-generator", "lab", "test-equipment"]
dependencies = [
    "PyVISA>=1.14.0",
    "pyvisa-py>=0.7.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "psutil>=5.9.0",
    "zeroconf>=0.131.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "pyfunctional>=1.4.0",
    "requests>=2.31.0",
    "pyreadline3>=3.4.0; sys_platform == 'win32'",
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "pymupdf>=1.24.0",
    "nidcpower>=1.5.0; python_version>='3.9'",
    "nidcpower>=1.4.0; python_version<'3.9'",
]

[project.optional-dependencies]
sim = []
hid = ["hidapi>=0.14.0"]
docs = ["mkdocs-material", "mkdocstrings[python]>=0.25.0", "mkdocs-gen-files"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
lint = ["ruff>=0.4.0"]

[project.scripts]
scpi-repl = "lab_instruments.repl:main"
scpi-gui = "lab_instruments.gui:main"
scpi-docs = "lab_instruments.docs_server:main"

[project.urls]
Homepage = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit"
Repository = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit"
Issues = "https://github.com/T-O-M-Tool-Oauto-Mationator/scpi-instrument-toolkit/issues"

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests using mock devices through the full REPL stack",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"lab_instruments/repl/shell.py" = ["E402"]
"lab_instruments/gui/widgets/file_viewers.py" = ["E402", "SIM102"]

[tool.coverage.run]
source = ["lab_instruments"]
omit = [
    "lab_instruments/site/*",
    "lab_instruments/site-library/*",
    "lab_instruments/docs_server.py",
    "lab_instruments/gui/*",
    "lab_instruments/__main__.py",
    "lab_instruments/examples.py",
    "lab_instruments/src/rigol_dho804.py",
    "lab_instruments/src/tektronix_mso2024.py",
    "lab_instruments/src/keysight_dsox1204g.py",
    "lab_instruments/src/discovery.py",
    "lab_instruments/src/bk_4063.py",
    "lab_instruments/src/owon_xdm1041.py",
    "lab_instruments/src/ev2300.py",
    "lab_instruments/repl/commands/ev2300.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["lab_instruments*"]

[tool.setuptools.package-data]
lab_instruments = [
    "site/*.html",
    "site/*.xml",
    "site/*.gz",
    "site/assets/stylesheets/*.css",
    "site/assets/stylesheets/*.map",
    "site/assets/javascripts/*.js",
    "site/assets/javascripts/*.map",
    "site/assets/javascripts/lunr/*.js",
    "site/assets/javascripts/lunr/min/*.js",
    "site/assets/javascripts/workers/*.js",
    "site/assets/javascripts/workers/*.map",
    "site/search/*.json",
    "site-library/*.html",
    "site-library/*.xml",
    "site-library/*.gz",
    "site-library/assets/stylesheets/*.css",
    "site-library/assets/stylesheets/*.map",
    "site-library/assets/javascripts/*.js",
    "site-library/assets/javascripts/*.map",
    "site-library/assets/javascripts/lunr/*.js",
    "site-library/assets/javascripts/lunr/min/*.js",
    "site-library/assets/javascripts/workers/*.js",
    "site-library/assets/javascripts/workers/*.map",
    "site-library/search/*.json",
    "site-library/instruments/**/*.html",
]

